--- a/focal/package/Dockerfile
+++ b/focal/package/Dockerfile
@@ -1,5 +1,5 @@
 ARG commit
-FROM rethinkdb/rdb-bionic-checkout:${commit}
+FROM rethinkdb/rdb-focal-checkout:${commit}
 
 WORKDIR /platform/rethinkdb
 
@@ -8,4 +8,4 @@ WORKDIR /platform/rethinkdb
 # We refetch to get any last-minute tags.
 RUN git fetch --all && git clean -fd
 
-RUN make -j7 build-deb UBUNTU_RELEASE=bionic
+RUN make -j7 build-deb UBUNTU_RELEASE=focal
